--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,14 @@ background: -webkit-gradient(linear, left top, right top, from(transparent), to(
 background: linear-gradient(to right, transparent, #8E0E00); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
+.slide {
+     overflow: hidden;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  height: 100vh;
+}
+
 .slide p {
     color: white;
     font-size: 1.5em;
@@ -116,20 +124,33 @@ background: linear-gradient(to right, transparent, #8E0E00); /* W3C, IE 10+/ Edg
     background: url(../images/5.jpg) center center / cover;
 }
 
+
+
+
 .projectimage {
     width: 50%;
     height: 100vh;
     position: relative;
     margin: 0 auto 0 0;
-/*    */
-    float: left;
-/*
-    -webkit-box-shadow: 3px -1px 324px black;
-    box-shadow: 3px -1px 324px black;
-*/
-    
+    float: left;  
 }
 
+
+
+
+
+/*
+ X 
+.polygon2 {
+  -webkit-clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+  clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+    width: 50%;
+    height: 100%;
+ 
+}
+*/
+
+/*
 .animate {
   -webkit-animation: magic 4s infinite;
   animation: magic 4s infinite;
@@ -188,11 +209,27 @@ background: linear-gradient(to right, transparent, #8E0E00); /* W3C, IE 10+/ Edg
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
 }
+*/
 
 
 #slide1 {
-/*    background: url(../images/5.jpg) center center / cover;*/
     background: #222;
+
+}
+
+.gradient {
+        position: absolute !important;
+    z-index: 999999;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7db9e8+0,222222+99&0+0,1+100 */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
+background: -webkit-gradient(linear, left top, right top, from(rgba(125,185,232,0)),color-stop(99%, rgba(34,34,34,0.99)),to(rgba(34,34,34,1)));
+background: linear-gradient(to right, rgba(125,185,232,0) 0%,rgba(34,34,34,0.99) 99%,rgba(34,34,34,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', endColorstr='#222222',GradientType=1 ); /* IE6-9 */
+          width: 50%;
+    height: 100vh;
+    position: relative;
+    margin: 0 auto 0 0;
+/*    */
+    float: left;
 }
 
 #slide2 {
@@ -210,6 +247,9 @@ background: linear-gradient(to right, transparent, #8E0E00); /* W3C, IE 10+/ Edg
         background: #222;
 
 }
+
+
+
 
 h3 {
   color: #666a73;
@@ -1242,14 +1282,87 @@ body {
 }
 
 .portfolio {
-
+font-family: 'Libre Baskerville', serif !important;
   font-size: 72px;
   background: -webkit-linear-gradient(transparent, #a90c11);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 20px #a90c11;
 }
+.parallax {
+    width: 100%;
+    height: 50%;
+    z-index: 99999999;
+}
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 100vh;
+  white-space: nowrap;
+}
 
+.parallax-layer.one {
+  color: #ccc;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+.parallax-layer.two {
+  color: #bbb;
+  -webkit-transform: translateZ(-.25px);
+  transform: translateZ(-.25px);
+}
+
+.parallax-layer.three {
+  color: #aaa;
+  -webkit-transform: translateZ(-.5px);
+  transform: translateZ(-.5px);
+}
+
+.parallax-layer.four {
+  color: #999;
+  -webkit-transform: translateZ(-.75px);
+  transform: translateZ(-.75px);
+}
+
+.parallax-layer.five {
+  color: #888;
+  -webkit-transform: translateZ(-1px);
+  transform: translateZ(-1px);
+}
+
+.parallax-layer.six {
+  color: #777;
+  -webkit-transform: translateZ(-1.25px);
+  transform: translateZ(-1.25px);
+}
+
+.parallax-layer.seven {
+  color: #666;
+  -webkit-transform: translateZ(-1.5px);
+  transform: translateZ(-1.5px);
+}
+
+.parallax-layer.eight {
+  color: #555;
+  -webkit-transform: translateZ(-1.75px);
+  transform: translateZ(-1.75px);
+}
+
+.parallax-layer.nine {
+  color: #444;
+  -webkit-transform: translateZ(-2px);
+  transform: translateZ(-2px);
+}
+
+.parallax-layer.ten {
+  color: #333;
+  -webkit-transform: translateZ(-2.25px);
+  transform: translateZ(-2.25px);
+}
 .header-links li {
     width: 33.33334%;
     display: inline-block;
